source/blender/editors/space_outliner/outliner_intern.h
@@ -236,6 +236,8 @@ void outliner_build_tree(struct Main *mainvar,
                          struct SpaceOutliner *space_outliner,
                          struct ARegion *region);
 
+bool outliner_requires_rebuild_on_select_or_active_change(
+    const struct SpaceOutliner *space_outliner);
 bool outliner_mode_requires_always_rebuild(const struct SpaceOutliner *space_outliner);
 
 typedef struct IDsSelectedData {
